# PhotometricCalibration

./: ArMarker.cpp  CMakeLists.txt  apply_calibration.cpp  calibration.h  lazycsv.h  response.cpp  vignette.cpp
result/photoCalibResult/: pcalib.txt
result/vignetteCalibResult/: log.txt
